Fix #337 [Regression] Custom game preview top rank cut off

--- a/static/site.css
+++ b/static/site.css
@@ -1782,7 +1782,6 @@ div#ctable-container {
 .tooltip .tooltiptext {
     visibility: hidden;
     position: absolute;
-    top: -20px;
     right: 105%;
     z-index: 1;
 }
